5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1880_2182.log
== TEST (2019-07-03 14:48:47) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("dimensao da matriz: "))
i = 0
t = zeros(n, dtype=int)
while (i < n):
	t[i] = float(input("t[i]: "))
	i = i + 1
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:51:38) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("dimensao da matriz: "))
for i in shape(n):
	for j in shape(n):
		v = array(eval(input("v")):
					 
print(v)
-- ERROR:
File "XXXX", line 6
    v = array(eval(input()):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:51:53) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("dimensao da matriz: "))
for i in shape(n):
	for j in shape(n):
		v = array(eval(input("v"))):
					 
print(v)
-- ERROR:
File "XXXX", line 6
    v = array(eval(input())):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:52:18) 
-- CODE:
from numpy import*
from numpy.linalg import*
n = int(input("dimensao da matriz: "))
for i in shape(n):
	for j in shape(n):
		v = float(input("v")):
					 
print(v)
-- ERROR:
File "XXXX", line 6
    v = float(input()):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
